--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,8 @@ services:
     ports:
       - 5000:5000
     restart: always
+  frontend:
+    build: ./frontend
+    ports:
+      - 8080:80
+    restart: always
